<resources>
    <string name="app_name">A2P SHOP</string>
    <string name="api_key">AIzaSyAWmxpY7Tk5TOU0zpvdrRqoCxQXRKdMVHY</string>
    <string name="signup">Signup</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="login">Login</string>
    <string name="fullname">Fullname</string>
    <string name="notnull">*</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="create_account">Create Account</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="a2p">A2P</string>
    <string name="shop">Shop</string>
    <string name="home">Home</string>
    <string name="my_cart">My Cart</string>
    <string name="profile">Profile</string>
    <string name="name_product">Tên sản phẩm</string>
    <string name="cost">$ 123.456</string>
    <string name="search">Search</string>
    <string name="recent_search">RECENT SEARCH</string>
    <string name="answer">KẾT QUẢ TÌM KIẾM</string>
    <string name="filter">Filter</string>
    <string name="price_low_to_high">Price (Low to High)</string>
    <string name="price_high_to_low">Price (High to Low)</string>
    <string name="a_z">A-Z</string>
    <string name="z_a">Z-A</string>
    <string name="apply">Apply</string>
    <string name="order_info">Order Info</string>
    <string name="subtotal">Subtotal</string>
    <string name="shipping_cost">Shipping Cost</string>
    <string name="total">Total</string>
    <string name="checkout">Checkout</string>
    <string name="add">+</string>
    <string name="remove">-</string>
    <string name="_1">1</string>
    <string name="name">Loop Silicone Strong Magnetic Watch</string>
    <string name="your_cart_is_empty">Your cart is empty</string>
    <string name="looks_like_you_have_not_added_anything_in_your_cart_go_ahead_and_explore_top_categories">Looks like you have not added anything in your cart. Go ahead and explore top categories.</string>
    <string name="explore_categories">Explore Categories</string>
    <string name="review">4.5 (2,495 reviews)</string>
    <string name="describe">Constructed with high-quality silicone material, the Loop Silicone Strong Magnetic Watch ensures a comfortable and secure fit on your wrist. The soft and flexible silicone is gentle on the skin, making it ideal for extended wear. Its lightweight design allows for a seamless blend of comfort and durability. One of the standout features of this watch band is its strong magnetic closure. The powerful magnets embedded within the band provide a secure and reliable connection, ensuring that your smartwatch stays firmly in place throughout the day. Say goodbye to worries about accidental detachment or slippage - the magnetic closure offers a peace of mind for active individuals on the go. The Loop Silicone Strong Magnetic Watch Band is highly versatile, compatible with a wide range of smartwatch models. Its adjustable strap length allows for a customizable fit, catering to various wrist sizes. Whether you\'re engaging in intense workouts or attending formal occasions, this watch band effortlessly adapts to your style and activity level.</string>
    <string name="quantity">Quantity</string>
    <string name="add_to_cart">Add To Cart</string>
    <string name="account">Account</string>
    <string name="categories">Categories</string>
    <string name="settings">Settings</string>
    <string name="role">Vai trò</string>
    <string name="sdt">SĐT</string>
    <string name="role_eng">Role</string>
    <string name="id">ID: 67e02d024be228e94f35ad6e</string>
    <string name="phone">Phone</string>
    <string name="edit_account">Edit Account</string>
    <string name="toast">Thông báo</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="forgot_password_">Forgot Password</string>
    <string name="confirmation_email">Confirmation Email</string>
    <string name="enter_your_email_address_for_verification">Enter your email address for verification.</string>
    <string name="send">Send</string>
    <string name="_01_03">01/03</string>
    <string name="_02_03">02/03</string>
    <string name="_03_03">03/03</string>
    <string name="email_verification">Email Verification</string>
    <string name="enter_the_6_digit_verification_code_send_to_your_email_address">Enter the 6-digit verification code send to your email address.</string>
    <string name="verification_code">Verification Code</string>
    <string name="proceed">Proceed</string>
    <string name="new_password">New Password</string>
    <string name="enter_your_new_password_and_remember_it">Enter your new password and remember it.</string>
    <string name="save">Save</string>
    <string name="logout">Logout</string>
    <string name="new_role">Thêm Role mới</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="permissions">Permissions</string>
    <string name="products_category_view">products-category_view</string>
    <string name="change_roles">change-roles</string>
    <string name="view_roles">view-roles</string>
    <string name="products_category_create">products-category_create</string>
    <string name="products_category_edit">products-category_edit</string>
    <string name="products_category_delete">products-category_delete</string>
    <string name="products_view">products_view</string>
    <string name="products_create">products_create</string>
    <string name="products_edit">products_edit</string>
    <string name="products_delete">products_delete</string>
    <string name="confirm">Confirm</string>
    <string name="new_account">Thêm Account mới</string>
    <string name="name_category">Tên danh mục</string>
    <string name="thumbnail">Thumbnail</string>
    <string name="add_category">Thêm Category mới</string>
    <string name="product">Product</string>
    <string name="add_product">Thêm sản phẩm mới</string>
    <string name="price">Price</string>
    <string name="discount_percentage">Discount Percentage</string>
    <string name="stock">Stock</string>
    <string name="dialog2">Chọn tác vụ dưới đây !</string>
    <string name="dialog1">Bạn muốn thực hiện tác vụ nào ?</string>
    <string name="fix">Sửa</string>
    <string name="delete">Xóa</string>
    <string name="address">Address</string>
    <string name="latlog">(0.0000, 0.0000)</string>
    <string name="cash">Thanh toán bằng tiền mặt</string>
    <string name="how_to_pay">Phương thức thanh toán</string>
    <string name="numberProduct">Items</string>
    <string name="order">Order</string>
    <string name="revenue">Revenue</string>
</resources>