<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="bottom"
    android:background="@drawable/bg_bottom_dialog"
    android:orientation="vertical"
    android:paddingHorizontal="18dp">

    <TextView
        android:id="@+id/nameDialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="12dp"
        android:padding="9dp"
        android:text="@string/new_role"
        android:textColor="@color/white"
        android:textSize="22sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:textStyle="normal" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="@string/notnull"
            android:textColor="@color/red"
            android:textSize="16sp"
            android:textStyle="normal" />

    </LinearLayout>

    <EditText
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:background="@drawable/bg_edt"
        android:hint="@string/title"
        android:padding="16dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="14sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/description"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:textStyle="normal" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="@string/notnull"
            android:textColor="@color/red"
            android:textSize="16sp"
            android:textStyle="normal" />

    </LinearLayout>

    <EditText
        android:id="@+id/describe"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:background="@drawable/bg_edt"
        android:hint="@string/description"
        android:padding="16dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="14sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/permissions"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:textStyle="normal" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="@string/notnull"
            android:textColor="@color/red"
            android:textSize="16sp"
            android:textStyle="normal" />

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="175dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <CheckBox
                android:id="@+id/checkbox1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:button="@drawable/checkbox"
                android:padding="12dp"
                android:text="@string/products_category_view"
                android:textColor="@color/white"
                android:textSize="16sp"
                tools:ignore="TouchTargetSizeCheck" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/gray" />
            <CheckBox
                android:id="@+id/checkbox2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:button="@drawable/checkbox"
                android:padding="12dp"
                android:text="@string/change_roles"
                android:textColor="@color/white"
                android:textSize="16sp"
                tools:ignore="TouchTargetSizeCheck" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/gray" />
            <CheckBox
                android:id="@+id/checkbox3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:button="@drawable/checkbox"
                android:padding="12dp"
                android:text="@string/view_roles"
                android:textColor="@color/white"
                android:textSize="16sp"
                tools:ignore="TouchTargetSizeCheck" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/gray" />
            <CheckBox
                android:id="@+id/checkbox4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:button="@drawable/checkbox"
                android:padding="12dp"
                android:text="@string/products_category_create"
                android:textColor="@color/white"
                android:textSize="16sp"
                tools:ignore="TouchTargetSizeCheck" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/gray" />
            <CheckBox
                android:id="@+id/checkbox5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:button="@drawable/checkbox"
                android:padding="12dp"
                android:text="@string/products_category_edit"
                android:textColor="@color/white"
                android:textSize="16sp"
                tools:ignore="TouchTargetSizeCheck" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/gray" />
            <CheckBox
                android:id="@+id/checkbox6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:button="@drawable/checkbox"
                android:padding="12dp"
                android:text="@string/products_category_delete"
                android:textColor="@color/white"
                android:textSize="16sp"
                tools:ignore="TouchTargetSizeCheck" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/gray" />
            <CheckBox
                android:id="@+id/checkbox7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:button="@drawable/checkbox"
                android:padding="12dp"
                android:text="@string/products_view"
                android:textColor="@color/white"
                android:textSize="16sp"
                tools:ignore="TouchTargetSizeCheck" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/gray" />
            <CheckBox
                android:id="@+id/checkbox8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:button="@drawable/checkbox"
                android:padding="12dp"
                android:text="@string/products_create"
                android:textColor="@color/white"
                android:textSize="16sp"
                tools:ignore="TouchTargetSizeCheck" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/gray" />
            <CheckBox
                android:id="@+id/checkbox9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:button="@drawable/checkbox"
                android:padding="12dp"
                android:text="@string/products_edit"
                android:textColor="@color/white"
                android:textSize="16sp"
                tools:ignore="TouchTargetSizeCheck" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/gray" />
            <CheckBox
                android:id="@+id/checkbox1o"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:button="@drawable/checkbox"
                android:padding="12dp"
                android:text="@string/products_delete"
                android:textColor="@color/white"
                android:textSize="16sp"
                tools:ignore="TouchTargetSizeCheck" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/gray" />
        </LinearLayout>
    </ScrollView>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">
    <Button
        android:id="@+id/btn_apply"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="18dp"
        android:background="@drawable/bg_button"
        android:text="@string/confirm"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="15sp" />
    <Button
        android:id="@+id/btn_delete"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="18dp"
        android:background="@drawable/bg_button"
        android:text="Delete"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="15sp" />
</LinearLayout>


</LinearLayout>
