<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    android:background="@drawable/bg_account"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/nameRole"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="start"
            android:paddingHorizontal="5dp"
            android:paddingVertical="2dp"
            android:shadowColor="@color/black"
            android:shadowRadius="1"
            android:text="@string/role"
            android:textColor="#317874"
            android:textSize="18sp"
            tools:ignore="TextContrastCheck" />

        <ImageView
            android:id="@+id/settings"
            android:layout_width="41dp"
            android:layout_height="41dp"
            android:layout_gravity="center"
            android:padding="9dp"
            android:src="@drawable/ic_settings" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/gray" />

    <TextView
        android:id="@+id/fullName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:maxLines="1"
        android:paddingHorizontal="5dp"
        android:paddingVertical="2dp"
        android:shadowColor="@color/black"
        android:shadowRadius="1"
        android:text="@string/fullname"
        android:textColor="#7D4DE3"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/Email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:maxLines="1"
        android:paddingHorizontal="5dp"
        android:paddingVertical="2dp"
        android:shadowColor="@color/black"
        android:shadowRadius="1"
        android:text="@string/email"
        android:textColor="#7D4DE3"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/sđt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:maxLines="1"
        android:paddingHorizontal="5dp"
        android:paddingVertical="2dp"
        android:shadowColor="@color/black"
        android:shadowRadius="1"
        android:text="@string/sdt"
        android:textColor="#7D4DE3"
        android:textSize="14sp" />

</LinearLayout>